Define custom validation constraint

--- a/hybris/config/local.properties
+++ b/hybris/config/local.properties
@@ -8,3 +8,5 @@ mail.smtp.port=587
 mail.smtp.user=<your gmail username>
 mail.smtp.password=<your gmail password>
 news_summary_mailing_address=<your gmail email address>
+
+validation.constraints.attribute.mapping.concerttours.constraints.NotLoremIpsum=strings
