--- a/hybris/bin/custom/concerttours/project.properties
+++ b/hybris/bin/custom/concerttours/project.properties
@@ -10,13 +10,13 @@
 # -----------------------------------------------------------------------
 # you can put key/value pairs here.
 # Use Config.getParameter(..) to retrieve the values during runtime.
-
 # concerttours.key=value
-
 # Specifies the location of the spring context file putted automatically to the global platform application context.
 concerttours.application-context=concerttours-spring.xml
-
 # you can control your logger as follows:
-log4j2.logger.helloController.name = concerttours.service.impl.DefaultConcerttoursService
-log4j2.logger.helloController.level = DEBUG
-log4j2.logger.helloController.appenderRef.stdout.ref = STDOUT
+log4j2.logger.helloController.name=concerttours.service.impl.DefaultConcerttoursService
+log4j2.logger.helloController.level=DEBUG
+log4j2.logger.helloController.appenderRef.stdout.ref=STDOUT
+# media format names
+band.list.format.name=bandList
+band.detail.format.name=bandDetail
